--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,21 +22,17 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:27.0.2'
     compile 'com.android.support:recyclerview-v7:27.0.2'
-    compile 'com.google.code.gson:gson:2.8.2'
-    compile 'com.github.bumptech.glide:glide:4.5.0'
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    compile 'io.reactivex.rxjava2:rxjava:2.1.8'
     compile 'com.squareup.okhttp3:okhttp:3.9.1'
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    compile 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+'//微信支付等
+    compile 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+'
+    //微信支付等
+    implementation project(':common')
 }
 repositories {
     mavenCentral()
