模块重定义

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':common', ':widget_refresh_recycler', ':widget_date_time_picker'
+include ':app', ':common', ':widget_recyclerview_extentions', ':widget_date_time_picker', ':library_rx_okhttp'
