--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,12 +3,12 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 27
-    buildToolsVersion "27.0.3"
+    compileSdkVersion rootProject.ext.android.compileSdkVersion
+    buildToolsVersion rootProject.ext.android.buildToolsVersion
     defaultConfig {
         applicationId "com.chichiangho.base"
-        minSdkVersion 17
-        targetSdkVersion 27
+        minSdkVersion rootProject.ext.android.minSdkVersion
+        targetSdkVersion rootProject.ext.android.targetSdkVersion
         versionCode 1
         versionName "1.0.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -26,14 +26,14 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:27.0.2'
-    compile 'com.squareup.okhttp3:okhttp:3.9.1'
+    testCompile rootProject.ext.dependency.junit
+    compile rootProject.ext.dependency.appcompat_v7
     compile 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+'
     //微信支付等
-    implementation project(':widget_refresh_recycler')
+    implementation project(':widget_recyclerview_extentions')
     implementation project(':widget_date_time_picker')
     implementation project(':common')
+    implementation project(':library_rx_okhttp')
 }
 repositories {
     mavenCentral()
