--- a/library_Rx_okhttp/build.gradle
+++ b/library_Rx_okhttp/build.gradle
@@ -12,6 +12,7 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
     }
 
     buildTypes {
@@ -24,18 +25,15 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation rootProject.ext.dependency.appcompat_v7
     testImplementation rootProject.ext.dependency.junit
     androidTestImplementation rootProject.ext.dependency.test_runner
     androidTestImplementation rootProject.ext.dependency.test_runner
-
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    compile 'io.reactivex.rxjava2:rxjava:2.1.8'
-    compile 'com.uber.autodispose:autodispose:0.6.1'
-    compile 'com.uber.autodispose:autodispose-android-archcomponents:0.6.1'
-    compile 'com.google.code.gson:gson:2.8.2'
-    compile 'com.github.bumptech.glide:glide:4.5.0'
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compile 'com.squareup.okhttp3:okhttp:3.9.1'
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation project(':common')
+}
+repositories {
+    mavenCentral()
 }
