--- a/library_Rx_okhttp/src/main/AndroidManifest.xml
+++ b/library_Rx_okhttp/src/main/AndroidManifest.xml
@@ -1,2 +1,2 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.chichiangho.widget_refresh_recycler" />
+    package="com.chichaingho.library_okhttp" />
