--- a/common/build.gradle
+++ b/common/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     implementation 'com.uber.autodispose:autodispose-android-archcomponents:0.6.1'
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation 'androidx.core:core-ktx:0.3'
 }
